--- a/css/css.css
+++ b/css/css.css
@@ -7,7 +7,7 @@
         body{
                 font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
                 color: #333;
-                background: #eee;
+                background:url(../img/bg.gif)  no-repeat;
             }
 
         #pms{
