--- a/css/css.css
+++ b/css/css.css
@@ -8,6 +8,11 @@
                 font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
                 color: #333;
                 background:url(../img/bg.gif)  no-repeat;
+                background-size: cover;
+               -webkit-background-size: cover;
+               -moz-background-size: cover;
+               -o-background-size: cover;
+               -ms-background-size: cover;
                  
             }
 
