--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,7 @@
         body{
                 font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
                 color: #333;
-                background:url(../img/ysbg.gif)  no-repeat;
+                background:url(../img/ysbj.gif)  no-repeat;
           background-size:100% 100%;
                 
                  
