--- a/css/css.css
+++ b/css/css.css
@@ -8,8 +8,8 @@
         body{
                 font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
                 color: #333;
-                background:url(../img/ysbj.gif)  no-repeat;
-          background-size:100% 100%;
+                background:url(../img/ysbj.gif)  no-repeat center;
+          
                 
                  
             }
