--- a/css/css.css
+++ b/css/css.css
@@ -9,7 +9,7 @@
                 font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
                 color: #333;
                 background:url(../img/ysbj.gif)  no-repeat center;
-          
+                background-size: cover;                
                 
                  
             }
